--- a/src/styles/_previewer.scss
+++ b/src/styles/_previewer.scss
@@ -158,7 +158,8 @@
 }
 
 .preview-button {
-  color: #404040;
+  color: inherit;
+  box-shadow: none;
   border: 1px solid rgba(0, 0, 0, 0.38) !important;
   position: absolute;
   content: 'Preview';
@@ -168,7 +169,8 @@
   right: 1rem;
   padding: 0.5rem;
   border-radius: 8px !important;
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: #404040;
     color: $note-sidebar-color;
   }
